# como

./: .clang-tidy  .versionrc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  como-config.cmake.in
como/: CMakeLists.txt
como/base/: CMakeLists.txt  app_singleton.h  config-como.h.cmake  config.h  options.cpp  options.h  output.h  output_helpers.h  output_topology.h  platform_helpers.h  platform_qobject.h  types.h
como/base/seat/: session.cpp  session.h
como/base/wayland/: app_singleton.h  filtered_display.cpp  filtered_display.h  output.h  output_helpers.h  platform.h  platform_helpers.h  screen_lock.h  server.h  server_helpers.h  xwl_platform.h
como/base/x11/: app_singleton.h  atoms.h  data.h  event_filter.h  event_filter_container.h  event_filter_manager.cpp  event_filter_manager.h  grabs.cpp  grabs.h  output.h  platform.h  platform_helpers.h  randr_filter.h  selection_owner.cpp  user_interaction_filter.h
como/data/: CMakeLists.txt  update_default_rules.cpp
como/debug/: CMakeLists.txt  support_info.h
como/debug/console/: console.cpp  console.h  model_helpers.h  window.h
como/debug/perf/: ftrace.h  ftrace_impl.cpp
como/desktop/: CMakeLists.txt  platform.h  screen_locker.h  screen_locker_watcher.cpp
como/desktop/kconf_update/: kwin-6.0-delete-desktop-switching-shortcuts.cpp  kwin.upd
como/desktop/kde/: kwin.notifyrc  platform.h  screen_locker.cpp  screen_locker.h
como/input/: CMakeLists.txt  config.h  cursor.h  device_redirect.h  event.h  event_filter.h  event_spy.h  idle.h  keyboard.cpp  keyboard.h  logging.h  platform.h  platform_qobject.cpp  platform_qobject.h  pointer.cpp  redirect_qobject.cpp  singleton_interface.cpp  switch.cpp  switch.h  touch.h  types.h  window_find.h
como/input/control/: config.h  device.cpp  device.h  keyboard.h  pointer.cpp  pointer_types.h  touch.cpp  touch.h
como/input/dbus/: device.cpp  device.h  device_helpers.h  device_manager.h  keyboard_layout.cpp  keyboard_layouts_v2.cpp  keyboard_layouts_v2.h  tablet_mode_manager.h
como/input/filters/: decoration_event.h  dpms.h  drag_and_drop.h  effects.h  fake_tablet.h  forward.h  global_shortcut.h  helpers.h  internal_window.h  keyboard_grab.h  lock_screen.h  move_resize.h  popup.h  screen_edge.h  tabbox.h  terminate_server.h  virtual_terminal.h  window_action.h  window_selector.h
como/render/: CMakeLists.txt  compositor.h  compositor_qobject.h  compositor_start.h  deco_shadow.h  effect_loader.cpp  effects.cpp  effects.h  options.cpp  options.h  outline.cpp  outline.h  scene.h  shadow.h  shortcuts_init.h  singleton_interface.h  types.h  window.h
como/script/: CMakeLists.txt  dbus_call.cpp  dbus_call.h  desktop_background_item.cpp  desktop_background_item.h  documentation-effect-global.xml  effect.cpp  effect.h  effect_loader.h  gesture_handler.cpp  js_engine_global_methods_wrapper.cpp  js_engine_global_methods_wrapper.h  options.cpp  options.h  platform.cpp  platform.h  quick_scene_effect.cpp  quick_scene_effect.h  screen_edge_handler.cpp  script.cpp  script.h  script_timer.cpp  shortcut_handler.cpp  space.cpp  space.h  utils.h  virtual_desktop_model.cpp  virtual_desktop_model.h  window.cpp  window.h  window_model.cpp  window_model.h  window_thumbnail_item.cpp  window_thumbnail_item.h
como/utils/: CMakeLists.txt  gamma_ramp.h
como/win/: CMakeLists.txt  actions.h  activation.h  active_window.h  appmenu.h  control.h  cursor_shape.cpp  cursor_shape.h  damage.h  deco.h  deco_input.h  desktop_get.h  desktop_set.h  desktop_space.h  focus_blocker.h  focus_chain_edit.h  focus_chain_find.h  geo.h  geo_block.h  geo_change.h  geo_electric.h  geo_move.h  input.h  kill_window.h  layers.h  maximize.h  meta.h  move.h  net.h  options.cpp  osd.h  osd_notification.cpp  output_space.h  placement.h  property_window.h  remnant.h  rules.h  scene.h  screen.h  screen_edges.cpp  (+32 more)
como/win/x11/: geo.h  (+61 more)
como/xwl/: CMakeLists.txt  clipboard.h  data_bridge.h  dnd.h  drag_wl.h  drag_x.h  mime.h  primary_selection.h  selection_data.h  selection_x11.h  socket.cpp  sources_ext.cpp  surface.h  transfer.cpp  transfer.h  types.h  x11_visit.h  xauthority.cpp  xauthority.h  xwayland.h
plugins/idletime/: CMakeLists.txt  poller.cpp  poller.h
plugins/qpa/: CMakeLists.txt  abstractplatformcontext.cpp  abstractplatformcontext.h  backingstore.cpp  backingstore.h  eglhelpers.cpp  eglhelpers.h  integration.cpp  integration.h  main.cpp  offscreensurface.cpp  offscreensurface.h  platformcursor.cpp  platformcursor.h  screen.cpp  screen.h  sharingplatformcontext.cpp  sharingplatformcontext.h  window.cpp  window.h
plugins/windowsystem/: CMakeLists.txt  plugin.cpp  windoweffects.cpp  windoweffects.h  windowsystem.cpp  windowsystem.h
tests/: CMakeLists.txt  screenedgeshowtest.cpp  x11shadowreader.cpp
tests/integration/: CMakeLists.txt  activation.cpp  bindings.cpp  buffer_size_change.cpp  client_machine.cpp  dbus_interface.cpp  debug_console.cpp  decoration_input.cpp  global_shortcuts.cpp  idle.cpp  idle_inhibition.cpp  input_method.cpp  input_stacking_order.cpp  internal_window.cpp  keyboard_keymap.cpp  keyboard_layout.cpp  keymap_creation_failure.cpp  layer_shell.cpp  lockscreen.cpp  maximize.cpp  modifier_only_shortcut.cpp  move_resize_window.cpp  no_crash_aurorae_destroy_deco.cpp  no_crash_cancel_animation.cpp  no_crash_cursor_physical_size_empty.cpp  no_crash_empty_deco.cpp  no_crash_glxgears.cpp  no_crash_no_border.cpp  no_crash_reinitialize_compositor.cpp  no_crash_useractions_menu.cpp  no_global_shortcuts.cpp  opengl_shadow.cpp  placement.cpp  plasma_surface.cpp  plasma_window.cpp  platform_cursor.cpp  pointer_constraints.cpp  pointer_input.cpp  qpainter_shadow.cpp  quick_tiling.cpp  (+17 more)
tests/manual/: CMakeLists.txt  README.md  cursorhotspottest.cpp  normalhintsbasesizetest.cpp  pointerconstraintstest.cpp  pointerconstraintstest.h  pointergesturestest.cpp  screenedgeshowtest.cpp  x11shadowreader.cpp
tests/minico/: CMakeLists.txt  README.md  main.cpp
tests/plasma/: CMakeLists.txt  README.md  main.h  main_wayland.cpp  main_x11.cpp
tests/unit/: gestures.cpp  xcb_window.cpp
(+1260 files in other folders)
